fix : getTeam (유저 본인이 속한 그룹 검색으로 변경)